Upgrade to parent 1.10.0